--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <script>
     (function () {
       // === ADDED: Default URL and normalization ===
-      const DEFAULT_URL = "https://unfudged-controllably-leona.ngrok-free.dev/?action=stream";
+      const DEFAULT_URL = "https://unfudged-controllably-leona.ngrok-free.dev/stream.mjpg";
 
       function normalizeUrl(u) {
         try {
